# dw-events

./: .gitignore  Makefile  pyproject.toml
dw_events/: __init__.py  notify.py  serializer.py  task.py
dw_events/adapters/: events.py
dw_events/ports/: events.py  tasks.py
dw_events/tests/: auto_subscribe_spec.py  event_handler_spec.py  event_subscriber_spec.py
dw_events/tests/unit/: auto_subscribe_test.py  basic_subscriber_test.py  event_handler_test.py  serialize_test.py
